CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(FH-ECE21)

# compiler options. (we only check for gcc)
if (${CMAKE_COMPILER_IS_GNUCC})
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -Wall -Werror")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O0 -g3 -Wall -Werror")
endif()

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
message(STATUS CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Mosquitto)

ADD_SUBDIRECTORY(toolcase)
ADD_SUBDIRECTORY(datalogger)

ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(demo)

ADD_SUBDIRECTORY(googletest)


ADD_SUBDIRECTORY(livehacking)
#ADD_SUBDIRECTORY(ss2023/students)
