ADD_SUBDIRECTORY(alfred.fauland)
ADD_SUBDIRECTORY(jakob.huetter)
ADD_SUBDIRECTORY(simon.hiden)
ADD_SUBDIRECTORY(christian.berger)
ADD_SUBDIRECTORY(andreas.heindl)
ADD_SUBDIRECTORY(peter.felber)
ADD_SUBDIRECTORY(gerd.hinteregger)
ADD_SUBDIRECTORY(michael.feldbacher)
ADD_SUBDIRECTORY(kevin.beichler)
ADD_SUBDIRECTORY(matthias.maicher)
ADD_SUBDIRECTORY(wenzel.lang)
ADD_SUBDIRECTORY(daniel.rotter)
ADD_SUBDIRECTORY(philipp.leitner)
ADD_SUBDIRECTORY(michael.zorn)

ADD_SUBDIRECTORY(joerg.faschingbauer)
